--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+box-sizing: border-box;
+
 
 }
 
 body {
- 
   background-color: #161717;
 }
